fix: fixed overlapping menus in tablet version, stretched to full screen on mobile

--- a/src/assets/scss/adaptive/_header.scss
+++ b/src/assets/scss/adaptive/_header.scss
@@ -155,7 +155,7 @@
 
 	// NAVIGATION
 	.header__navbar {
-		max-width: 320px;
+		max-width: 100%;
 		padding-top: 0;
 		padding-bottom: 20px;
 	}
