--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -7,6 +7,7 @@
 
 .header__top {
 	position: relative;
+	z-index: 31;
 
 	height: $ifm-header-top-height;
 
